fix footer flickering

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,8 +1,14 @@
 footer {
   color: $white;
-
+  
   .heart {
     color: $cyan;
+  }
+
+  .footer-text {
+    height: 2.5em;
+    display: grid;
+    align-items: center;
   }
 }
 
